// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserRepository should call login API for OTP and return response 1`] = `
Object {
  "access_token": "access_token",
  "country_code": "IN",
  "email": "r@gmail.com",
  "full_name": "Rishabh Modi",
  "phone_number": "99999999",
  "refresh_token": "refresh_token",
}
`;

exports[`UserRepository should call login API for email and return response 1`] = `
Object {
  "access_token": "access_token",
  "country_code": "IN",
  "email": "r@gmail.com",
  "full_name": "Rishabh Modi",
  "phone_number": "99999999",
  "refresh_token": "refresh_token",
}
`;

exports[`UserRepository should call otp API for fetch 1`] = `
Object {
  "otp_sent": true,
}
`;

exports[`UserRepository should call otp API for verify 1`] = `
Object {
  "otp_verify": true,
}
`;

exports[`UserRepository should call socialLogin and return response 1`] = `
Object {
  "is_new_user": false,
  "user": Object {
    "access_token": "access_token",
    "refresh_token": "refresh_token",
    "user": Object {
      "country_code": "IN",
      "email": "r@gmail.com",
      "full_name": "Rishabh Modi",
      "phone_number": "99999999",
    },
  },
}
`;

exports[`UserRepository should check if email exists 1`] = `
Object {
  "is_exists": true,
}
`;

exports[`UserRepository should check if phone exists 1`] = `
Object {
  "is_exists": true,
}
`;

exports[`UserRepository should fetch OnBoarding screen data 1`] = `
Array [
  Object {
    "description": "Sit amet, in enim nunc, etiam amet velit. Malesuada non neque nec in a.",
    "image_url": "https://homzhub-bucket.s3.amazonaws.com/Search_Onboarding.svg",
    "title": "Search",
  },
  Object {
    "description": "Sit amet, in enim nunc, etiam amet velit. Malesuada non neque nec in a.",
    "image_url": "https://homzhub-bucket.s3.amazonaws.com/Post_Onboarding.svg",
    "title": "Post",
  },
  Object {
    "description": "Sit amet, in enim nunc, etiam amet velit. Malesuada non neque nec in a.",
    "image_url": "https://homzhub-bucket.s3.amazonaws.com/Maintain_Onboarding.svg",
    "title": "Maintain",
  },
]
`;

exports[`UserRepository should fetch social media data 1`] = `
Array [
  Object {
    "clientID": "1008014324415-kclkc41epc41nqjp0uc4gdgg528m1nc6.apps.googleusercontent.com",
    "description": "with Google",
    "provider": "GOOGLE",
  },
  Object {
    "clientID": "",
    "description": "with Facebook",
    "provider": "FACEBOOK",
  },
  Object {
    "clientID": "",
    "description": "with Linkedin",
    "provider": "LINKEDIN",
  },
]
`;
